--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 <body>
 
-  <!-- Skip to content (accessibility) -->
   <a href="#agents" class="skip-link">Skip to directory</a>
 
   <!-- Background Effects -->
@@ -26,6 +25,9 @@
   <div class="glow-orb orb-1" aria-hidden="true"></div>
   <div class="glow-orb orb-2" aria-hidden="true"></div>
   <div class="glow-orb orb-3" aria-hidden="true"></div>
+
+  <!-- Scroll Progress Bar -->
+  <div class="scroll-progress" id="scroll-progress" aria-hidden="true"></div>
 
   <!-- Navbar -->
   <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
@@ -51,6 +53,7 @@
           <svg class="icon-moon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
         </button>
         <button class="nav-cta" onclick="openSubmitModal()">
+          <span class="nav-cta-dot"></span>
           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
           Submit Agent
         </button>
@@ -60,6 +63,11 @@
       </div>
     </div>
   </nav>
+
+  <!-- Live Activity Feed -->
+  <div class="activity-feed" id="activity-feed" aria-live="polite">
+    <div class="activity-feed-inner" id="activity-feed-inner"></div>
+  </div>
 
   <!-- Hero -->
   <section class="hero" id="hero">
@@ -78,6 +86,11 @@
         The most comprehensive directory of autonomous AI agents.<br class="hide-mobile">
         Compare, evaluate, and deploy across 9 categories.
       </p>
+      <!-- Live user count -->
+      <div class="live-users reveal">
+        <span class="live-dot"></span>
+        <span id="live-count">2,847</span> people exploring right now
+      </div>
       <div class="search-wrapper reveal">
         <div class="search-box" id="search-box">
           <div class="search-icon-wrap">
@@ -114,6 +127,19 @@
     </div>
   </section>
 
+  <!-- Social Proof Banner -->
+  <section class="social-proof-banner">
+    <div class="social-proof-inner">
+      <div class="proof-item">⭐ <strong>4.8/5</strong> average rating</div>
+      <div class="proof-divider">•</div>
+      <div class="proof-item">🏆 <strong>12,000+</strong> teams trust us</div>
+      <div class="proof-divider">•</div>
+      <div class="proof-item">🚀 <strong>340+</strong> agents added this month</div>
+      <div class="proof-divider">•</div>
+      <div class="proof-item">🔒 <strong>100%</strong> verified listings</div>
+    </div>
+  </section>
+
   <!-- Categories -->
   <section class="section" id="categories">
     <div class="section-inner">
@@ -138,8 +164,23 @@
     </div>
   </section>
 
+  <!-- Testimonials -->
+  <section class="section" id="testimonials">
+    <div class="section-inner">
+      <div class="section-header reveal">
+        <div class="section-label"><span class="section-dot green"></span>Loved by Teams</div>
+        <h2>What our users say</h2>
+        <p class="section-desc">Join thousands of teams finding the perfect AI agents</p>
+      </div>
+      <div class="testimonial-carousel" id="testimonial-carousel">
+        <div class="testimonial-track" id="testimonial-track"></div>
+      </div>
+      <div class="testimonial-dots" id="testimonial-dots"></div>
+    </div>
+  </section>
+
   <!-- All Agents -->
-  <section class="section" id="agents">
+  <section class="section section-alt" id="agents">
     <div class="section-inner">
       <div class="section-header reveal">
         <div class="section-label"><span class="section-dot cyan"></span>Directory</div>
@@ -187,12 +228,17 @@
   </div>
 
   <!-- Pricing -->
-  <section class="section section-alt" id="pricing">
+  <section class="section" id="pricing">
     <div class="section-inner">
       <div class="section-header reveal">
         <div class="section-label"><span class="section-dot green"></span>For Agent Builders</div>
         <h2>Get discovered by thousands</h2>
         <p class="section-desc">List your AI agent and reach decision-makers looking for solutions</p>
+      </div>
+      <!-- Urgency countdown -->
+      <div class="pricing-urgency reveal">
+        <span class="urgency-icon">🔥</span>
+        <span>Launch offer: <strong>50% off Featured tier</strong> — only <span class="countdown" id="countdown"></span> left</span>
       </div>
       <div class="pricing-grid">
         <div class="pricing-card reveal">
@@ -208,13 +254,14 @@
               <li><span class="check green">✓</span>Up to 4 tags</li>
             </ul>
             <button class="pricing-btn" onclick="openSubmitModal()">Get Started Free</button>
+            <div class="pricing-social">✅ 847 agents listed this month</div>
           </div>
         </div>
         <div class="pricing-card popular reveal">
           <div class="popular-badge">Most Popular</div>
           <div class="pricing-card-inner">
             <div class="pricing-tier accent">Featured</div>
-            <div class="pricing-price">$49<span>/mo</span></div>
+            <div class="pricing-price"><span class="pricing-strike">$49</span>$24<span>/mo</span></div>
             <p class="pricing-desc">Stand out from the crowd</p>
             <ul class="pricing-features">
               <li><span class="check accent">✓</span>Everything in Basic</li>
@@ -225,6 +272,7 @@
               <li><span class="check accent">✓</span>Up to 8 tags</li>
             </ul>
             <button class="pricing-btn primary" onclick="openSubmitModal()">Get Featured →</button>
+            <div class="pricing-social">⚡ Only 12 featured spots left</div>
           </div>
         </div>
         <div class="pricing-card reveal">
@@ -242,14 +290,19 @@
               <li><span class="check gold">✓</span>Monthly report</li>
             </ul>
             <button class="pricing-btn" onclick="openSubmitModal()">Go Premium</button>
+            <div class="pricing-social">🏆 Used by Devin, Cursor, Perplexity</div>
           </div>
         </div>
+      </div>
+      <div class="guarantee-badge reveal">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
+        <span>30-day money-back guarantee • Cancel anytime • No contracts</span>
       </div>
     </div>
   </section>
 
   <!-- Newsletter -->
-  <section class="section" id="newsletter">
+  <section class="section section-alt" id="newsletter">
     <div class="section-inner">
       <div class="newsletter-card reveal">
         <div class="newsletter-glow" aria-hidden="true"></div>
@@ -262,13 +315,23 @@
             <button type="submit">Subscribe Free <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg></button>
           </form>
           <p class="newsletter-note">No spam. Unsubscribe anytime.</p>
+          <div class="newsletter-avatars">
+            <div class="avatar-stack">
+              <div class="avatar" style="background:#a78bfa">S</div>
+              <div class="avatar" style="background:#06b6d4">J</div>
+              <div class="avatar" style="background:#34d399">M</div>
+              <div class="avatar" style="background:#f472b6">A</div>
+              <div class="avatar" style="background:#fbbf24">R</div>
+            </div>
+            <span class="avatar-text">Join 12,847 subscribers</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <!-- CTA -->
-  <section class="section section-alt">
+  <section class="section">
     <div class="section-inner">
       <div class="cta-card reveal">
         <div class="cta-glow" aria-hidden="true"></div>
@@ -370,6 +433,11 @@
   <button class="back-to-top" id="back-to-top" onclick="window.scrollTo({top:0,behavior:'smooth'})" aria-label="Back to top">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="18 15 12 9 6 15"/></svg>
   </button>
+
+  <!-- Sticky mobile CTA -->
+  <div class="mobile-sticky-cta" id="mobile-sticky-cta">
+    <button onclick="openSubmitModal()">🚀 List Your Agent — Free</button>
+  </div>
 
   <div class="toast" id="toast"></div>
 
